--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
 
+.ranbiricon{
+    display: inline-block;
+    vertical-align: middle;
+    width: 10px;
+    height: 10px;
+}
+
+#name{
+    display: inline-block;
+    vertical-align: middle;
+}
 
 body{
     background-color: aquamarine;
